welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:3: error: not found: value *
override def run() {*
                    ^