welcome.lessons.welcome.array.basics.Array2.scala.code

override def run() {*
var T= new Array[Color](getMondeHauteur())
if (estFaceMur()==true){ 
	T((getMondeHauteur()-1))=getCouleurSol()
	recule();recule(); recule(); recule(); recule();
}
else {


for (i<-0 to (getMondeHauteur()-2)){
	
	T(i)=getCouleurSol()
	
	
	avance();
}
recule(5);
gauche();
avance();
droite();
for (k<-1 to (getMondeLargeur()-1)){
for (j<-0 to (getMondeHauteur()-1)){
	T(j)=T(j+1);
	setCouleurBrosse(T(j));
	baisseBrosse();
     leveBrosse();
    avance();
}
recule(5);
gauche();
avance();
droite();
}

}


}
     
